--- a/style.css
+++ b/style.css
@@ -165,9 +165,9 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background: url("images/banner.mp4") no-repeat center ;
+    background: url("images/banner.gif") no-repeat center;
     height: 100vh;
-    color: black;
+    color: #fff;
     min-height: 500px;
     background-size: cover;
     background-attachment: fixed;
